--- a/docker/shell/Dockerfile-jammy
+++ b/docker/shell/Dockerfile-jammy
@@ -1,4 +1,4 @@
-# Copyright 2018 Cargill Incorporated
+# Copyright 2020 NTRLab
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,9 +11,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# docker build -f validator/Dockerfile -t sawtooth-validator-local .
-
 # -------------===  build ===-------------
 
 FROM ubuntu:jammy
@@ -23,53 +20,34 @@ RUN apt-get update \
 
 RUN apt-get update && apt-get install -y -q \
     git \
-    iputils-ping\
-    net-tools unzip \
+    iputils-ping net-tools\
     python3 \
-    python3-stdeb python3-pip
+    python3-stdeb
 
 RUN apt-get install -y -q \
     python3-grpcio \
     python3-protobuf
 
 RUN apt-get install -y -q \
-    libssl-dev \
-    openssl \
-    pkg-config \
     python3-cbor \
     python3-colorlog \
     python3-cryptography>=1.7.1 \
-    python3-dev \
-    python3-lmdb \
-    python3-netifaces \
     python3-toml \
-    python3-yaml \
-    python3-zmq 
-     
-      
-#  python3-graphviz
+    python3-yaml python3-pip
+
 RUN pip3 install secp256k1
 RUN pip3 install grpcio-tools
-RUN pip3 install pyformance
+RUN pip3 install cryptography
 RUN pip3 install pysha3
 
-ENV PATH=$PATH:/project/$DGT_TOP/bin:/project/$DGT_TOP/bgx/bin:/protoc3/bin
+# take Ethereum hash function
+# import sha3
+# k = sha3.keccak_256()
+# k.update('age'.encode())
+# print (k.hexdigest())
+# addr = keccak_256('51fe1dfe5211f93bc7'.encode()).digest()[-20:].hex()
+#RUN pip3 install pysha3
 
-RUN ln -s /usr/bin/python3 /usr/bin/python
-
-RUN mkdir -p /etc/dgt/keys
-RUN mkdir -p /var/lib/dgt
-RUN mkdir -p /var/log/dgt
-
-#ENV PATH=$PATH:/project/$DGT_TOP/bgx/bin:/project/$DGT_TOP/bin
+ENV PATH=$PATH:/project/$DGT_TOP/bin:/project/$DGT_TOP/bgx/bin
 
 WORKDIR /project/$DGT_TOP
-
-CMD echo "\033[0;32m--- Building validator ---\n\033[0m" \
- && bin/protogen \
- && cd validator \
- && if [ -d "debian" ]; then rm -rf debian; fi \
- && python3 setup.py clean --all \
- && python3 setup.py --command-packages=stdeb.command debianize \
- && if [ -d "packaging/ubuntu" ]; then cp -R packaging/ubuntu/* debian/; fi 
- 
