--- a/docker/settings/Dockerfile-bionic
+++ b/docker/settings/Dockerfile-bionic
@@ -41,7 +41,11 @@ RUN apt-get install -y -q --allow-downgrades \
     python3-colorlog \
     python3-toml \
     python3-yaml \
-    python3-zmq
+    python3-zmq  \
+    python3-secp256k1 \
+    python3-cbor  \
+    python3-cryptography>=1.7.1
+
 
 RUN pip3 install pysha3
 # For Building Protobufs
