--- a/validator/Dockerfile-jammy
+++ b/validator/Dockerfile-jammy
@@ -1,4 +1,4 @@
-# Copyright 2018 Cargill Incorporated
+# Copyright 2020 DGT NETWORK INC © Stanislav Parsov
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# docker build -f validator/Dockerfile -t sawtooth-validator-local .
+# docker build -f validator/Dockerfile -t validator-dgt .
 
 # -------------===  build ===-------------
 
@@ -53,7 +53,7 @@ RUN pip3 install grpcio-tools
 RUN pip3 install pyformance
 RUN pip3 install pysha3
 
-ENV PATH=$PATH:/project/$DGT_TOP/bin:/project/$DGT_TOP/bgx/bin:/protoc3/bin
+ENV PATH=$PATH:/project/$DGT_TOP/bin:/protoc3/bin
 
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
@@ -61,7 +61,7 @@ RUN mkdir -p /etc/dgt/keys
 RUN mkdir -p /var/lib/dgt
 RUN mkdir -p /var/log/dgt
 
-#ENV PATH=$PATH:/project/$DGT_TOP/bgx/bin:/project/$DGT_TOP/bin
+#ENV PATH=$PATH:/project/$DGT_TOP/bin
 
 WORKDIR /project/$DGT_TOP
 
