--- a/docker/Dockerfile-bionic
+++ b/docker/Dockerfile-bionic
@@ -31,12 +31,14 @@ RUN apt-get update && apt-get install -y -q \
     iputils-ping\
     net-tools unzip \
     python3 \
-    python3-stdeb python3-pip
+    python3-stdeb python3-pip \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get install -y -q \
     python3-grpcio \
     python3-grpcio-tools \
-    python3-protobuf
+    python3-protobuf \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get install -y -q \
     libssl-dev \
@@ -56,10 +58,12 @@ RUN apt-get install -y -q \
     python3-secp256k1 \
     python3-toml \
     python3-yaml \
-    python3-zmq 
+    python3-zmq \
+    && rm -rf /var/lib/apt/lists/*
      
       
-#  python3-graphviz
+#  python3-graphviz python3-grpcio-tools
+# RUN pip3 install grpcio-tools
 RUN pip3 install pysha3
 
 RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
