--- a/docker/Dockerfile-jammy
+++ b/docker/Dockerfile-jammy
@@ -26,11 +26,13 @@ RUN apt-get update && apt-get install -y -q \
     iputils-ping\
     net-tools unzip \
     python3 \
-    python3-stdeb python3-pip
+    python3-stdeb python3-pip \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get install -y -q \
     python3-grpcio \
-    python3-protobuf
+    python3-protobuf \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get install -y -q \
     libssl-dev \
@@ -44,7 +46,8 @@ RUN apt-get install -y -q \
     python3-netifaces \
     python3-toml \
     python3-yaml \
-    python3-zmq 
+    python3-zmq \
+    && rm -rf /var/lib/apt/lists/*
      
       
 #  python3-graphviz
@@ -71,7 +74,7 @@ RUN mkdir -p /var/log/dgt
 
 WORKDIR /project/$DGT_TOP
 
-CMD echo "\033[0;32m--- Building validator ---\n\033[0m" \
+CMD echo "\033[0;32m--- Building common ---\n\033[0m" \
  && bin/protogen \
  && cd validator \
  && if [ -d "debian" ]; then rm -rf debian; fi \
