--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@
 ISOLATION_ID=latest
 INSTALL_TYPE=-local
 DGT_TOP=dgt
-DISTR=bionic
+DISTRB=bionic
 DISTRF=focal
-DISTRJ=jammy
+DISTR=jammy
 CRYPTO_BACK=openssl
 BOT_TOKEN=1205652427:AAFr0eynwihWGyvObUA0QSjOfKMwiH3HkZs
 VAULT_URL=http://vault:8200
