--- a/docker/Dockerfile-bionic
+++ b/docker/Dockerfile-bionic
@@ -31,17 +31,17 @@ RUN apt-get update && apt-get install -y -q \
     iputils-ping\
     net-tools unzip \
     python3 \
-    python3-stdeb python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+    python3-stdeb python3-pip 
+
 
 RUN apt-get install -y -q \
     python3-grpcio \
     python3-grpcio-tools \
-    python3-protobuf \
-    && rm -rf /var/lib/apt/lists/*
+    python3-protobuf 
+
 
 RUN apt-get install -y -q \
-    libssl-dev \
+     \
     openssl \
     graphviz \
     pkg-config \
@@ -62,13 +62,13 @@ RUN apt-get install -y -q \
     && rm -rf /var/lib/apt/lists/*
      
       
-#  python3-graphviz python3-grpcio-tools
+#  python3-graphviz python3-grpcio-tools libssl-dev
 # RUN pip3 install grpcio-tools
 RUN pip3 install pysha3
 
-RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
- && unzip protoc-3.5.1-linux-x86_64.zip -d protoc3 \
- && rm protoc-3.5.1-linux-x86_64.zip
+#RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
+# && unzip protoc-3.5.1-linux-x86_64.zip -d protoc3 \
+# && rm protoc-3.5.1-linux-x86_64.zip
 
 ENV PATH=$PATH:/project/$DGT_TOP/bin:/project/$DGT_TOP/bgx/bin:/protoc3/bin
 
