--- a/telebot/Dockerfile-jammy
+++ b/telebot/Dockerfile-jammy
@@ -16,52 +16,52 @@
 
 # -------------=== rest_api build ===-------------
 
-FROM ubuntu:bionic
+FROM ubuntu:jammy
 ARG DGT_TOP
-RUN apt-get update \
- && apt-get install gnupg -y
 
-RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sources.list \
- && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
- || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
- && apt-get update
+# git python3-stdeb net-tools pkg-config
+RUN apt-get update && apt-get install --no-install-recommends -y -q \
+    iputils-ping \
+    unzip         \
+    openssl
 
-RUN apt-get update && apt-get install -y -q \
-    git \
-    python3 \
-    python3-stdeb \
+RUN apt-get install --no-install-recommends -y -q \
+    python3       \
     python3-pip   \
-    language-pack-ru \
-    python3-lmdb
-
-RUN apt-get install -y -q \
     python3-grpcio \
-    python3-grpcio-tools \
-    python3-protobuf
+    python3-protobuf 
+    
 
-RUN apt-get install -y -q \
-    python3-aiodns \
-    python3-aiohttp \
+RUN apt-get install --no-install-recommends -y -q \
+    python3-cbor \
     python3-colorlog \
-    python3-cchardet\
-    python3-pyformance \
+    python3-cryptography>=1.7.1 \
+    python3-dev \
+    python3-lmdb \
+    python3-netifaces \
     python3-toml \
     python3-yaml \
-    python3-zmq  \
-    python3-secp256k1 python3-cryptography>=1.7.1 \
-    python3-cbor
-
+    python3-zmq \
+    python3-requests \
+    python3-sha3 \
+    && rm -rf /var/lib/apt/lists/*
+     
+      
+#  python3-graphviz libssl-dev
+RUN pip3 install secp256k1
+RUN pip3 install grpcio-tools
+RUN pip3 install pyformance
+RUN pip3 install chardet
+RUN pip3 install aiodns aiohttp aiohttp_security[session]
 RUN pip3  install pytelegrambotapi
 #RUN pip3 install dialogflow
 RUN pip3 install google-cloud-dialogflow
-RUN pip3 install pysocks
-RUN pip3 install hvac             
-RUN pip3 install "hvac[parser]"
-RUN pip3 install pysha3  
+#RUN pip3 install pysocks
+RUN pip3 install hvac   "hvac[parser]"          
 				  
 RUN mkdir /var/log/dgt
 
-ENV PATH=$PATH:/project/$DGT_TOP/bin:/project/$DGT_TOP/bgx/bin
+ENV PATH=$PATH:/project/$DGT_TOP/bin:
 ENV GOOGLE_APPLICATION_CREDENTIALS=./small-talk.json
 ENV LANG=ru_RU.UTF-8
 WORKDIR /project/$DGT_TOP
