git add oauth mode

--- a/docker/vault/Dockerfile-jammy
+++ b/docker/vault/Dockerfile-jammy
@@ -50,7 +50,7 @@ RUN pip3 install secp256k1
 RUN pip3 install grpcio-tools
 RUN pip3 install pyformance
 RUN pip3 install chardet
-RUN pip3 install aiodns aiohttp aiohttp_security[session]
+RUN pip3 install aiodns aiohttp aiohttp_security[session] oauthlib
 RUN pip3 install hvac "hvac[parser]"            
 #RUN pip3 install "hvac[parser]"
 
