--- a/docker/docker-compose-netCN-dgt-dec-ci.yaml
+++ b/docker/docker-compose-netCN-dgt-dec-ci.yaml
@@ -297,6 +297,7 @@ services:
     - CRYPTO_BACK=${CRYPTO_BACK}
     - DGT_TOP=${DGT_TOP}
     - HTTPS_MODE=${HTTPS_MODE}
+    - ACCESS_TOKEN=${ACCESS_TOKEN}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -314,7 +315,7 @@ services:
         dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};cr_cert.sh /project/peer/keys/http_srv.crt /project/peer/keys/http_srv.key;rm -f /project/peer/logs/rest-api*.log*;
         python3 setup.py clean --all
         python3 setup.py build
-        dgt-rest-api -vv --connect tcp://validator-${PNM}-${C}-${N}:${COMP} --bind api-${PNM}-${C}-${N}:${API} ${INFLUXDB} http://${DBHOST}:8086 --opentsdb-db metrics --opentsdb-username ${DBUSER} --opentsdb-password ${DBPASS} ${HTTPS_MODE}
+        dgt-rest-api -vv --connect tcp://validator-${PNM}-${C}-${N}:${COMP} --bind api-${PNM}-${C}-${N}:${API} ${INFLUXDB} http://${DBHOST}:8086 --opentsdb-db metrics --opentsdb-username ${DBUSER} --opentsdb-password ${DBPASS} ${HTTPS_MODE} ${ACCESS_TOKEN}
       "
     stop_signal: SIGKILL
 
