fix dgt control

--- a/.env.dgt
+++ b/.env.dgt
@@ -6,8 +6,10 @@ DOC_LOG_FILES=5
 DOC_LOG_SIZE=100m
 FCOMPOSE="docker/docker-compose-netCN-dgt-dec-ci.yaml"
 DASH_FCOMP="docker/docker-compose-dash-dgt-ci.yaml"
+GRAF_FCOMP="docker/docker-compose-grafana-dgt.yml"
 # 
 DGT_OPTS_LIST="-clog"
+DGT_GRAF_PARAMS=(PEER API DBPORT DBUSER DBPASS DB_ADM_USER DB_ADM_PASS DBMODE)
 DGT_DASH_PARAMS=(PEER CLUST NODE COMP API SIGNED PNM CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
 DGT_PARAMS=(PEER CLUST NODE API COMP NET CONS GENESIS SINGLE PCONTROL PEERING SEEDS NETWORK SIGNED ENDHOST INFLUXDB DBHOST DBUSER DBPASS PNM KYC CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
 declare -A PARAMS_HELP=(
@@ -29,6 +31,10 @@ declare -A PARAMS_HELP=(
     [DBHOST]="Service name with Influx DB: stats-influxdb-dgt"
     [DBUSER]="Influx DB user: <user name>"
     [DBPASS]="Influx DB password: <password>"
+    [DB_ADM_USER]="Influx DB admin: <admin name>"
+    [DB_ADM_PASS]="Influx DB admin password: <password>"
+    [DBMODE]="Influx DB mode: metrics"
+    [DBPORT]="Influx DB port: 8086"
     [CRYPTO_BACK]="Cryptography type: openssl/bitcoin"
     [SIGNED]="Signed consensus mode: --signed_consensus/ "
     [HTTPS_MODE]="--http_ssl/ "
@@ -40,6 +46,7 @@ declare -A PARAMS_HELP=(
 # all dgt cluster
 CLUSTER_LIST=(c1_1 c2_1 c3_1)
 DASH_LIST=(dash dash1)
+GRAF_LIST=(graf graf1)
 
 TEST_DGT_PARAMS=(PEER CLUST NODE API COMP NET CONS GENESIS SINGLE PCONTROL PEERING SEEDS NETWORK SIGNED ENDHOST INFLUXDB DBHOST DBUSER DBPASS PNM KYC CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
 
@@ -178,6 +185,32 @@ CRYPTO_BACK_DASH1=openssl
 HTTPS_MODE_DASH1=
 ACCESS_TOKEN_DASH1=
 ######### << DASH1 DGT PEER ##########
+
+
+
+
+
+######### >> GRAF PEER ##########
+PEER_GRAF=graf
+API_GRAF=3000
+DBPORT_GRAF=8086
+DBUSER_GRAF=lrdata
+DBPASS_GRAF=pwlrdata
+DB_ADM_USER_GRAF="admin"
+DB_ADM_PASS_GRAF="pwadmin"
+DBMODE_GRAF=metrics
+######### << GRAF DGT PEER ##########
+
+######### >> GRAF1 PEER ##########
+PEER_GRAF1=graf1
+API_GRAF1=3001
+DBPORT_GRAF1=8086
+DBUSER_GRAF1=lrdata
+DBPASS_GRAF1=pwlrdata
+DB_ADM_USER_GRAF1="admin"
+DB_ADM_PASS_GRAF1="pwadmin"
+DBMODE_GRAF1=metrics
+######### << GRAF1 DGT PEER ##########
 
 
 
