--- a/docker/docker-compose-grafana-dgt.yml
+++ b/docker/docker-compose-grafana-dgt.yml
@@ -10,16 +10,16 @@ services:
     networks:
     - network1
     ports:
-      - '8086:8086'
+      - ${DBPORT}:${DBPORT}
     volumes:
       - /var/lib/influx-data:/var/lib/influxdb
     environment:
-      - INFLUXDB_DB=metrics
-      - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=pwadmin
-      - INFLUXDB_USER=lrdata          
-      - INFLUXDB_USER_PASSWORD=pwlrdata
-      - INFLUXD_LOG_LEVEL=debug 
+      - INFLUXDB_DB=${DBMODE}
+      - INFLUXDB_ADMIN_USER=${DB_ADM_USER}
+      - INFLUXDB_ADMIN_PASSWORD=${DB_ADM_PASS}
+      - INFLUXDB_USER=${DBUSER}          
+      - INFLUXDB_USER_PASSWORD=${DBPASS}
+      - INFLUXD_LOG_LEVEL=${DBLOG} 
   grafana:
     build:
       context: ..
@@ -29,7 +29,7 @@ services:
     networks:
     - network1
     ports:
-      - 3000:3000
+      - ${API}:${API}
     user : root
     volumes:
       - ../../grafana:/var/lib/grafana
