fix new control

--- a/.env.dgt
+++ b/.env.dgt
@@ -4,22 +4,19 @@ DISTR=jammy
 DGTLOGS=../diglogs
 DOC_LOG_FILES=5    
 DOC_LOG_SIZE=100m
-FCOMPOSE="docker/docker-compose-netCN-dgt-dec-ci.yaml"
-DASH_FCOMP="docker/docker-compose-dash-dgt-ci.yaml"
-GRAF_FCOMP="docker/docker-compose-grafana-dgt.yml"
-NOTA_FCOMP="docker/docker-compose-notary-raft-dgt.yaml"
+#FCOMPOSE="docker/docker-compose-netCN-dgt-dec-ci.yaml"
+#DASH_FCOMP="docker/docker-compose-dash-dgt-ci.yaml"
+#GRAF_FCOMP="docker/docker-compose-grafana-dgt.yaml"
+#NOTA_FCOMP="docker/docker-compose-notary-raft-dgt.yaml"
 # 
-DGT_DBMODE=metrics
-DGT_MAX_PEER=70
-DGT_DAG_BRANCH=6
-DGT_DBPORT=8086
+
 DGT_GATEWAY=https://drive.google.com/file/d/1o6SEUvogow432pIKQEL8-EEzNBinzW9R/view?usp=sharing
-DGT_OPTS_LIST="-clog"
-DGT_NOTA_PARAMS=(PEER PNM CRYPTO_BACK USER_NOTARY BOT_TOKEN LADDR BON NREST SEAL_ADDR REST_API HTTPS_MODE ACCESS_TOKEN DGT_TOKEN)
-DGT_GRAF_PARAMS=(PEER API DBPORT DBUSER DBPASS DB_ADM_USER DB_ADM_PASS DBMODE)
-DGT_DASH_PARAMS=(PEER CLUST NODE COMP API SIGNED PNM CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
-DGT_PARAMS=(PEER CLUST NODE API COMP NET CONS GENESIS SINGLE DAG_BRANCH PCONTROL MAX_PEER PEERING SEEDS NETWORK SIGNED ENDHOST GATEWAY INFLUXDB DBMODE DBHOST DBPORT DBUSER DBPASS PNM KYC CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
-declare -A PARAMS_HELP=(
+#DGT_NOTA_PARAMS=(PEER PNM CRYPTO_BACK USER_NOTARY BOT_TOKEN LADDR BON NREST SEAL_ADDR REST_API HTTPS_MODE ACCESS_TOKEN DGT_TOKEN)
+#DGT_GRAF_PARAMS=(PEER API DBPORT DBUSER DBPASS DB_ADM_USER DB_ADM_PASS DBMODE)
+#DGT_DASH_PARAMS=(PEER CLUST NODE COMP API SIGNED PNM CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
+#DGT_PARAMS=(PEER CLUST NODE API COMP NET CONS GENESIS SINGLE DAG_BRANCH PCONTROL MAX_PEER PEERING SEEDS NETWORK SIGNED ENDHOST GATEWAY INFLUXDB DBMODE DBHOST DBPORT DBUSER DBPASS PNM KYC CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
+
+declare -A PARAMS_HELP_=(
     [PEER]="Dgt peer name: <name>"
     [CLUST]="Cluser name: 'c[1..9]'"
     [NODE]="Peer number in cluster: [1..]"
@@ -65,7 +62,6 @@ DASH_LIST=(dash dash1)
 GRAF_LIST=(graf graf1)
 NOTARY_LIST=(nota nota1)
 
-TEST_DGT_PARAMS=(PEER CLUST NODE API COMP NET CONS GENESIS SINGLE PCONTROL PEERING SEEDS NETWORK SIGNED ENDHOST INFLUXDB DBHOST DBUSER DBPASS PNM KYC CRYPTO_BACK HTTPS_MODE ACCESS_TOKEN)
 
 # PROTOTYPE DGT CLUSTER
 PEER_PROTOTYPE=proto
