--- a/.env.dgt
+++ b/.env.dgt
@@ -57,7 +57,7 @@ declare -A PARAMS_HELP_=(
     [BON]="Teler bot mode: -bon/"
 )
 # all dgt cluster
-CLUSTER_LIST=(c1_1 c2_1 c3_1 c1_2 c1_3 c2_2 c2_3 c3_2 c3_3 dyn_1 dyn_2)
+CLUSTER_LIST=(c1_1 c2_1 c3_1 c1_2 c1_3 c2_2 c2_3 c3_2 c3_3 dyn_1 dyn_2 c4_1)
 DASH_LIST=(dash dash1)
 GRAF_LIST=(graf graf1)
 NOTARY_LIST=(nota nota1)
@@ -480,3 +480,35 @@ CRYPTO_BACK_DYN_2=openssl
 HTTPS_MODE_DYN_2=
 ACCESS_TOKEN_DYN_2=
 ######### << DYN_2 DGT PEER ##########
+
+######### >> C4_1 PEER ##########
+PEER_C4_1=c4_1
+CLUST_C4_1=c4
+NODE_C4_1=1
+API_C4_1=8108
+COMP_C4_1=4104
+NET_C4_1=8101
+CONS_C4_1=5051
+GENESIS_C4_1=N
+SINGLE_C4_1=N
+DAG_BRANCH_C4_1=
+PCONTROL_C4_1=
+MAX_PEER_C4_1=
+PEERING_C4_1=static
+SEEDS_C4_1=
+NETWORK_C4_1=net0
+SIGNED_C4_1=--signed_consensus
+ENDHOST_C4_1=
+GATEWAY_C4_1=
+INFLUXDB_C4_1=--opentsdb-url-off
+DBMODE_C4_1=
+DBHOST_C4_1=stats-influxdb-dgt
+DBPORT_C4_1=
+DBUSER_C4_1=lrdata
+DBPASS_C4_1=pwlrdata
+PNM_C4_1=dgt
+KYC_C4_1=
+CRYPTO_BACK_C4_1=openssl
+HTTPS_MODE_C4_1=
+ACCESS_TOKEN_C4_1=
+######### << C4_1 DGT PEER ##########
