--- a/.env.dgt
+++ b/.env.dgt
@@ -108,6 +108,11 @@ ACCESS_TOKEN_DASH=
 PEER_C1_1=c1.1
 CLUST_C1_1=c1
 NODE_C1_1=1
+DBPORT_C1_1=
+DBMODE_C1_1=
+GATEWAY_C1_1=
+MAX_PEER_C1_1=
+DAG_BRANCH_C1_1=
 API_C1_1=8108
 COMP_C1_1=4104
 NET_C1_1=8101
