--- a/TheGraph/yarn-compose.yaml
+++ b/TheGraph/yarn-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.6'
 services:
   app:
     build:
@@ -7,5 +7,9 @@ services:
     ports:
       - "3000:3000" # Замените на порт, который ваше приложение использует
     volumes:
-      - .:/app
-    command: yarn start # Здесь указывается ваша команда для запуска приложения с помощью yarn
+      - ./sub_app:/project/sub_app
+    container_name: graph-app
+    command: |
+      bash -c "
+        tail -f /dev/null
+      "
