--- a/.env.dgt
+++ b/.env.dgt
@@ -57,6 +57,7 @@ declare -A PARAMS_HELP_=(
     [BON]="Teler bot mode: -bon/"
 )
 # all dgt cluster
+DEVEL_LIST=( dev1)
 CLUSTER_LIST=(c1_1 c2_1 c3_1 c1_2 c1_3 c2_2 c2_3 c3_2 c3_3 dyn_1 dyn_2 c4_1)
 DASH_LIST=(dash dash1)
 GRAF_LIST=(graf graf1)
@@ -517,3 +518,13 @@ CRYPTO_BACK_C4_1=openssl
 HTTPS_MODE_C4_1=
 ACCESS_TOKEN_C4_1=
 ######### << C4_1 DGT PEER ##########
+
+
+######### >> DEV1 PEER ##########
+PEER_DEV1=proto
+PNM_DEV1=dgt
+CRYPTO_BACK_DEV1=openssl
+HTTPS_MODE_DEV1=
+ACCESS_TOKEN_DEV1=
+DGT_TOKEN_DEV1=
+######### << DEV1 DGT PEER ##########
