--- a/.env.dgt
+++ b/.env.dgt
@@ -522,6 +522,7 @@ ACCESS_TOKEN_C4_1=
 
 ######### >> DEV1 PEER ##########
 PEER_DEV1=proto
+COMP_URL_DEV1=tcp://validator-dgt-c1-1:4104
 PNM_DEV1=dgt
 CRYPTO_BACK_DEV1=openssl
 HTTPS_MODE_DEV1=
