fix for dyn mode

--- a/.env.dgt
+++ b/.env.dgt
@@ -118,7 +118,7 @@ API_C1_1=8108
 COMP_C1_1=4104
 NET_C1_1=8101
 CONS_C1_1=5051
-GENESIS_C1_1=N
+GENESIS_C1_1=Y
 SINGLE_C1_1=N
 PCONTROL_C1_1=
 PEERING_C1_1=static
@@ -431,6 +431,12 @@ DGT_TOKEN_NOTA1=eeee
 
 ######### >> DYN_1 PEER ##########
 PEER_DYN_1=dyn_1
+DBPORT_DYN_1=
+DBMODE_DYN_1=
+MAX_PEER_DYN_1=
+DBPORT_DYN_1=
+DBMODE_DYN_1=
+DAG_BRANCH_DYN_1=
 CLUST_DYN_1=dyn
 NODE_DYN_1=1
 API_DYN_1=8708
@@ -441,11 +447,11 @@ GENESIS_DYN_1=Y
 SINGLE_DYN_1=N
 PCONTROL_DYN_1=
 PEERING_DYN_1=dynamic
-SEEDS_DYN_1=--seeds
+SEEDS_DYN_1="--seeds tcp://validator-dgt-c1-1:8101"
 NETWORK_DYN_1=net0
 SIGNED_DYN_1=--signed_consensus
 ENDHOST_DYN_1=
-GATEWAY_DYN_1=https://drive.google.com/file/d/1o6SEUvogow432pIKQEL8-EEzNBinzW9R/view?usp=sharing
+GATEWAY_DYN_1=tcp://validator-dgt-c1-1:8101
 INFLUXDB_DYN_1=--opentsdb-url-off
 DBHOST_DYN_1=stats-influxdb-dgt
 DBUSER_DYN_1=lrdata
