fix proc client

--- a/.env.dgt
+++ b/.env.dgt
@@ -145,7 +145,7 @@ API_C2_1=8208
 COMP_C2_1=4204
 NET_C2_1=8201
 CONS_C2_1=5251
-GENESIS_C2_1=N
+GENESIS_C2_1=Y
 SINGLE_C2_1=N
 PCONTROL_C2_1=
 PEERING_C2_1=static
