--- a/.env.dgt
+++ b/.env.dgt
@@ -134,7 +134,7 @@ PNM_C1_1=dgt
 KYC_C1_1=
 CRYPTO_BACK_C1_1=openssl
 HTTPS_MODE_C1_1=
-ACCESS_TOKEN_C1_1=
+ACCESS_TOKEN_C1_1=--access_token
 ######### << C1_1 DGT PEER ##########
 
 ######### >> C2_1 PEER ##########
