--- a/Seth/docker/Dockerfile-jammy
+++ b/Seth/docker/Dockerfile-jammy
@@ -55,7 +55,10 @@ RUN pip3 install pyformance
 RUN pip3 install chardet
 RUN pip3 install aiodns aiohttp aiohttp_security[session] oauthlib
 
-RUN apt-get update && apt-get install   --no-install-recommends -y -q build-essential
+# for EVM
+RUN pip3 install py-evm eth-utils
+
+#RUN apt-get update && apt-get install   --no-install-recommends -y -q build-essential
 # aiohttp_oauth2
 
 ENV PATH=$PATH:/project/$DGT_TOP/bin:
