--- a/.env.dgt
+++ b/.env.dgt
@@ -57,6 +57,7 @@ declare -A PARAMS_HELP_=(
     [BON]="Teler bot mode: -bon/"
 )
 # all dgt cluster
+DETH_LIST=( deth1)
 DEVEL_LIST=( dev1)
 CLUSTER_LIST=(c1_1 c2_1 c3_1 c1_2 c1_3 c2_2 c2_3 c3_2 c3_3 dyn_1 dyn_2 c4_1)
 DASH_LIST=(dash dash1)
@@ -535,3 +536,16 @@ HTTPS_MODE_DEV1=
 ACCESS_TOKEN_DEV1=
 DGT_TOKEN_DEV1=
 ######### << DEV1 DGT PEER ##########
+
+######### >> DETH1 PEER ##########
+PEER_DETH1=deth1
+CLUST_DETH1=c1
+NODE_DETH1=1
+COMP_DETH1=4104
+API_DETH1=8108
+SIGNED_DETH1=--signed_consensus
+PNM_DETH1=dgt
+CRYPTO_BACK_DETH1=openssl
+HTTPS_MODE_DETH1=
+ACCESS_TOKEN_DETH1=
+######### << DETH1 DGT PEER ##########
