--- a/families/dgt_eth/Dockerfile-jammy
+++ b/families/dgt_eth/Dockerfile-jammy
@@ -12,52 +12,75 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# docker build -f sdk/examples/intkey_python/Dockerfile -t intkey-tp-python-local .
+# docker build -f docker/Dockerfile -t dgt-common-jammy
 
-# -------------=== intkey-tp-python build ===-------------
+# -------------===  build ===-------------
 
 FROM ubuntu:jammy
 ARG DGT_TOP
-RUN apt-get update \
- && apt-get install gnupg -y
+#RUN apt-get update && apt-get install gnupg -y
 
-RUN apt-get update && apt-get install -y -q \
-    git \
-    python3 \
-    python3-stdeb python3-pip
+# git python3-stdeb net-tools pkg-config
+RUN apt-get update && apt-get install --no-install-recommends -y -q \
+    iputils-ping \
+    unzip         \
+    openssl
 
-# python3-grpcio-tools python3-secp256k1
-RUN apt-get install -y -q \
+RUN apt-get install --no-install-recommends -y -q \
+    python3       \
+    python3-pip   \
     python3-grpcio \
     python3-protobuf 
+    
 
-RUN apt-get update && apt-get install -y -q  libzmq5
-
-RUN apt-get install -y -q \
+RUN apt-get install --no-install-recommends -y -q \
     python3-cbor \
     python3-colorlog \
+    python3-cryptography>=1.7.1 \
+    python3-dev \
+    python3-lmdb \
+    python3-netifaces \
     python3-toml \
     python3-yaml \
-    python3-zmq   \
-    python3-cryptography>=1.7.1
-
+    python3-zmq \
+    python3-requests \
+    python3-sha3 \
+    && rm -rf /var/lib/apt/lists/*
+     
+      
+#  python3-graphviz libssl-dev
+RUN pip3 install secp256k1
 RUN pip3 install grpcio-tools
 RUN pip3 install pyformance
-#RUN pip3 install chardet
-RUN pip3 install secp256k1
-     	    
-RUN pip3 install pysha3
-RUN mkdir -p /var/log/dgt
+RUN pip3 install chardet
+RUN pip3 install aiodns aiohttp aiohttp_security[session] oauthlib
+
+# for EVM
+RUN apt-get update && apt-get install   --no-install-recommends -y -q build-essential
+RUN apt-get update && apt-get install -y -q software-properties-common
+RUN add-apt-repository ppa:ethereum/ethereum
+RUN apt-get update && apt-get install   --no-install-recommends -y -q solc
+RUN pip3 install py-evm eth-utils
+RUN pip3 install py-solc
+RUN pip3 install eth_abi
+#
+# aiohttp_oauth2
 
 ENV PATH=$PATH:/project/$DGT_TOP/bin:
 
+RUN ln -s /usr/bin/python3 /usr/bin/python
+
+RUN mkdir -p /etc/dgt/keys
+RUN mkdir -p /var/lib/dgt
+RUN mkdir -p /var/log/dgt
+
 WORKDIR /project/$DGT_TOP
 
-#RUN pip3 install asyncio-nats-client
-#RUN pip3 install pyorient
-
-CMD echo "\033[0;32m--- Building bgt-python ---\n\033[0m" \
+CMD echo "\033[0;32m--- Building common ---\n\033[0m" \
  && bin/protogen \
- && cd families/bgt_python \
+ && cd validator \
+ && if [ -d "debian" ]; then rm -rf debian; fi \
  && python3 setup.py clean --all \
- && python3 setup.py build
+ && python3 setup.py --command-packages=stdeb.command debianize \
+ && if [ -d "packaging/ubuntu" ]; then cp -R packaging/ubuntu/* debian/; fi 
+ 
