--- a/families/dgt_eth/Dockerfile-jammy
+++ b/families/dgt_eth/Dockerfile-jammy
@@ -63,7 +63,10 @@ RUN apt-get update && apt-get install   --no-install-recommends -y -q solc
 RUN pip3 install py-evm eth-utils
 RUN pip3 install py-solc
 RUN pip3 install eth_abi
-#
+
+RUN pip3 install termcolor
+RUN pip3 install web3
+RUN pip3 install plyvel
 # aiohttp_oauth2
 
 ENV PATH=$PATH:/project/$DGT_TOP/bin:
