--- a/.env.dgt
+++ b/.env.dgt
@@ -119,7 +119,7 @@ API_C1_1=8108
 COMP_C1_1=4104
 NET_C1_1=8101
 CONS_C1_1=5051
-GENESIS_C1_1=N
+GENESIS_C1_1=Y
 SINGLE_C1_1=N
 PCONTROL_C1_1=
 PEERING_C1_1=static
@@ -135,7 +135,7 @@ PNM_C1_1=dgt
 KYC_C1_1=
 CRYPTO_BACK_C1_1=openssl
 HTTPS_MODE_C1_1=
-ACCESS_TOKEN_C1_1=--access_token
+ACCESS_TOKEN_C1_1=
 ######### << C1_1 DGT PEER ##########
 
 ######### >> C2_1 PEER ##########
